# insitubatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  mkdocs.yml  pangeo-showcase-abstract.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: __init__.py  _profile.py  advection_report.py  advection_sweep.py  backend.py  bench_throughput.py  benchmark_plan.md  engines.py  make_dataset.py  ops_aws.md  ops_gcp.md  plot.py  probe_decode.py  probe_memory.py  result.py  run.py  spike_v2_decode.py
docs/: api.md  architecture.md  benchmarks.md  examples.md  index.md  tuning.md  walkthrough.md
docs/figures/: advection_chunk.html  advection_inflight.html  advection_inner.html  advection_size.html  g1_throughput_vs_chunk.html  g2_ablation.html  g3_throughput_vs_compute.html  g4_cache_epochs.html  g5_peak_memory.html  g6_ttfb.html  g7_worker_tuning.html
examples/: README.md  __init__.py  _forecast_metrics.py  fit_scaler.py  transforms.py  wb2_arraylake.py  wb2_dataloader.py  wb2_xbatcher.py
examples/advection/: __init__.py  data.py  train_jax.py  train_tf.py  train_torch.py  train_torch_metrics.py
examples/hubble/: __init__.py  data.py  train_torch.py  wfc3ir_m16_uris.json
examples/microscopy/: __init__.py  data.py  train_torch.py
examples/sdss/: __init__.py  data.py  dr17_plate_uris.json  train_torch.py
src/insitubatch/: __init__.py  buffer.py  cache.py  check_transform.py  frameworks.py  io.py  plan.py  pool.py  scheduler.py  shuffle.py  source.py  split.py  store.py  transforms.py  types.py
tests/: conftest.py  test_advection.py  test_bench.py  test_cache.py  test_check_transform.py  test_errors.py  test_example.py  test_fits_bintable.py  test_fsspec_store.py  test_hubble.py  test_icechunk.py  test_integration.py  test_io.py  test_jax.py  test_microscopy.py  test_plan.py  test_plot.py  test_pool.py  test_prefetch.py  test_sample_axis.py  test_scheduler.py  test_sdss.py  test_sdss_build.py  test_shuffle.py  test_source.py  test_split.py  test_store.py  test_tf.py  test_torch.py  test_transforms.py  test_uneven_chunking.py  test_window.py  test_zarr_v2.py
