[project]
name = "insitubatch"
version = "0.1.0"
description = "Train in place on n-dimensional cloud tensors: the data-loader orchestration layer on top of solved async IO (obstore / zarr v3 / icechunk)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "David Stuebe", email = "stu3b3+emfdavid@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["zarr", "xarray", "pytorch", "dataloader", "obstore", "machine-learning", "cloud", "async"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "zarr>=3.0",
    "xarray>=2024.9",
    "obstore>=0.3",
]

[project.scripts]
# A development tool (not on the training hot path): probe one chunk of a real store to
# check a chunk_transform's geometry, declared output_inner, and GIL-release behavior.
insitubatch-check-transform = "insitubatch.check_transform:main"

[project.urls]
Documentation = "https://emfdavid.github.io/insitubatch/"
Homepage = "https://emfdavid.github.io/insitubatch/"
Repository = "https://github.com/emfdavid/insitubatch"
Changelog = "https://github.com/emfdavid/insitubatch/blob/main/CHANGELOG.md"
Issues = "https://github.com/emfdavid/insitubatch/issues"

[project.optional-dependencies]
# Framework handoff surfaces (insitubatch.frameworks): thin DLPack adapters over the
# numpy Batch. All optional -- the core engine imports no framework. torch needs a
# base class (DataLoader subclass); JAX iterates directly; TF wraps via from_generator.
torch = [
    "torch>=2.2",
    "torchdata>=0.10",
]
jax = [
    "jax>=0.4.30",
    # flax + optax are the idiomatic JAX training stack the advection example uses; the
    # bare `to_jax` DLPack adapter needs only jax itself.
    "flax>=0.8",
    "optax>=0.2",
]
tf = [
    "tensorflow>=2.16",
]
# GPU-native path (zero-copy chunk -> cupy -> dlpack -> torch, optional nvCOMP
# decode). Pulls CUDA wheels; only resolvable on a CUDA box, hence isolated here.
gpu = [
    "cupy-cuda12x>=13.0",
    "kvikio-cu12>=24.10",
]
# Virtual-zarr views over GRIB/NetCDF so the engine only ever speaks zarr-async.
virtual = [
    "virtualizarr>=1.2",
]
# Stronger cross-run cache invalidation: cloudpickle fingerprints a chunk_transform
# (closures + referenced globals), so editing one invalidates the persisted cache
# automatically. Optional -- without it the fingerprint falls back to a best-effort
# source hash (and warns); an explicit `transform.cache_key` is always honored.
cache = [
    "cloudpickle>=3",
]
# Benchmark suite extras: the xbatcher baseline (B2), plotting, and the py-spy
# sampling profiler (probe_decode --profile). (pandas comes in transitively via
# xarray.)
bench = [
    "xbatcher>=0.3",
    "plotly>=5.20",
    "gcsfs>=2024.6",  # xr.open_zarr(gs://...) for the WeatherBench2 example baseline
    "py-spy>=0.4",  # sampling profiler; --native sees obstore (Rust) + numcodecs (C)
    "scikit-learn>=1.4",  # examples/fit_scaler.py — partial_fit over the loader
    "psutil>=5.9",  # probe_memory: peak RSS over the process tree (incl. DataLoader workers)
]
# Docs site (MkDocs-Material + API from docstrings), published to GitHub Pages.
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
icechunk = [
    "icechunk>=0.2",
]
# fsspec-backed stores (insitubatch.fsspec_store) reach backends via fsspec: GCS
# Rapid/zonal (gRPC) and requester-pays, which obstore does not currently support.
# gcsfs pulls fsspec transitively; bring your own s3fs/etc. for other schemes.
gcsfs = [
    "gcsfs>=2024.6",
]
# Arraylake catalog access for examples/wb2_arraylake.py: the client vends
# credentials for the public earthmover-public/weatherbench2 Icechunk repo (and
# pulls icechunk in).
arraylake = [
    "arraylake>=0.14",
]
# Build-time FITS index stack for the astronomy examples (Hubble images, SDSS
# spectra): kerchunk.fits parses each FITS header, VirtualiZarr exposes the
# byte-range references, and they are committed to an Icechunk store. Needed only
# to BUILD the reference store -- the training hot path is icechunk + numpy, never
# kerchunk/astropy. astropy also backs the ground-truth read in tests. The SDSS
# (binary-table / structured-dtype) path additionally requires two unreleased
# upstream fixes, pinned to git in [tool.uv.sources] below.
astronomy = [
    "virtualizarr>=2.6",
    "kerchunk>=0.2.10",
    "astropy>=8.0",
    "s3fs>=2024.6",
    "icechunk>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

# Temporary git pin for FITS binary-table (structured-dtype) support, exercised by
# tests/test_fits_bintable.py. This entry is dev-environment only (uv strips it from the
# published wheel, so downstream requirements are unchanged). Drop it once a release ships.
#   - virtualizarr: kerchunk struct-dtype refs for FITS binary tables
#     (zarr-developers/VirtualiZarr#1037, open on the emfdavid fork). Released VirtualiZarr
#     raises on the list-valued field specs; on merge, repoint to a zarr-developers/VirtualiZarr
#     main commit, then to the release.
# NOTE: the related zarr struct-dtype byte-order fix (zarr-developers/zarr-python#4142) is NOT
# pinned -- it fixes the direct `zarr.create_array('>f4')` path, but VirtualiZarr/icechunk store
# the struct fields with native-order labels, so the codec fix never engages: consumers reinterpret
# each field with `.view('>f4')` at the numpy boundary regardless of the zarr version.
[tool.uv.sources]
virtualizarr = { git = "https://github.com/emfdavid/VirtualiZarr.git", rev = "8a1563f236355534d06362034c1a05ab27667eba" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]  # make the dev-only `bench` package importable in tests

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
